--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ before_script:
   - "flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79"
 
 script:
-  - pytest --doctest-modules -v
+  - pytest --doctest-modules -v --doctest-glob="*.rst"
+    
