--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ python:
 before_install:
   - pip install pep8
   - pip install flake8
+install:
+  - python setup.py develop
 before_script:
   - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 KDEpy
 script:
-  - pytest --doctest-modules -v --doctest-glob="*.rst"
+  - pytest --doctest-modules -v --doctest-glob="*.rst" --capture=sys
 deploy:
   provider: pypi
   user: tommyod
