--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ python:
 before_install:
   - pip install pep8
   - pip install flake8
-after_install:
+  - pip install -r requirements.txt
+install:
   - python setup.py develop
 before_script:
   - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 KDEpy
