--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 before_install:
   - pip install pep8
   - pip install flake8
-  - pip install -r requirements.txt
+  - pip install cython
 install:
   - python setup.py develop
 before_script:
