--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - pip install pep8
   - pip install flake8
   - pip install cython
+  - pip install -r requirements.txt
 install:
   - python setup.py develop
 before_script:
