--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,6 +20,7 @@ build_script:
   - SET PATH=C:\Py;C:\Py\Scripts;C:\Py\Library\bin;%PATH%
   - conda config --set always_yes yes
   - conda update conda --quiet
+  - pip install -r requirements.txt
   - ps: python setup.py develop
 
 test_script:
