--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ notifications:
   email: false
 python:
   - '3.6'
-  - '3.7'
 before_install:
   - pip install pep8
   - pip install flake8
@@ -11,7 +10,7 @@ before_install:
 install:
   - python setup.py develop
 before_script:
-  - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py" KDEpy
+  - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py, *kde.py" KDEpy
 script:
   - pytest --doctest-modules -v --doctest-glob="*.rst" --capture=sys
 deploy:
