--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ matrix:
       language: generic
       env: PIP=pip2
 
-
 notifications:
   email: false
 env:
@@ -19,16 +18,22 @@ env:
 python:
   - '3.6'
 before_install:
-  - $pip install pep8
-  - $pip install flake8
-  - $pip install -r requirements.txt
+  - $PIP install pep8
+  - $PIP install flake8
+  - $PIP install -r requirements.txt
 install:
   - python setup.py develop
 before_script:
   - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py, *kde.py" KDEpy
 script:
   - pytest --doctest-modules -v --doctest-glob="*.rst" --capture=sys
-  - $pip install cibuildwheel==0.7.1
+  - $PIP install cibuildwheel==0.7.1
+  - cibuildwheel --output-dir wheelhouse
+  - |
+    if [[ $TRAVIS_TAG ]]; then
+      python -m pip install twine
+      python -m twine upload wheelhouse/*.whl
+    fi
 deploy:
   provider: pypi
   user: tommyod
