--- a/.travis.yml
+++ b/.travis.yml
@@ -29,14 +29,7 @@ before_script:
 - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py,
   *kde.py" KDEpy
 script:
-- pytest --doctest-modules -v --doctest-glob="*.rst" --capture=sys
-- "$PIP install cibuildwheel==0.7.1"
-- cibuildwheel --output-dir wheelhouse
-- |
-  if [[ $TRAVIS_TAG ]]; then
-    python -m pip install twine
-    python -m twine upload wheelhouse/*.whl
-  fi
+- pytest . --doctest-modules -v --doctest-glob="*.rst" --capture=sys
 deploy:
   provider: pypi
   user: tommyod
