--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,20 @@
 language: python
 matrix:
   include:
-  - sudo: required
-    services:
-    - docker
-    env: PIP=pip
-  - os: osx
-    language: generic
-    env: PIP=pip2
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
+           PIP=pip
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
+           PRE_CMD=linux32
+           PIP=pip
+    - os: osx
+      language: generic
+      env: PIP=pip2
 notifications:
   email: false
 env:
@@ -17,19 +24,22 @@ python:
 - '3.6'
 before_install:
 - "$PIP install pep8"
-- "$PIP install flake8"
+- "$PIP install flake8>=3.5.0"
 - "$PIP install numpy>=1.14.2"
 - "$PIP install scipy>=1.0.1"
 - "$PIP install pytest>=3.6.2"
 - "$PIP install cython>=0.28.4"
 - "$PIP install matplotlib>=2.2.2"
 install:
+- docker pull $DOCKER_IMAGE
 - python setup.py develop
 before_script:
 - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py,
   *kde.py" KDEpy
 script:
 - pytest . --doctest-modules -v --doctest-glob="*.rst" --capture=sys
+- docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh
+- ls wheelhouse/
 deploy:
   provider: pypi
   user: tommyod
