--- a/.travis.yml
+++ b/.travis.yml
@@ -38,11 +38,15 @@ before_install:
 - "$PIP install pytest>=3.6.2"
 - "$PIP install cython>=0.28.4"
 - "$PIP install matplotlib>=2.2.2"
+- "$PIP install auditwheel"
+
 before_script:
 - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py,
   *kde.py" KDEpy
 script:
 - pytest . --doctest-modules -v --doctest-glob="*.rst" --capture=sys
+- docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh
+- ls wheelhouse/
 deploy:
   provider: pypi
   user: tommyod
