--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ notifications:
   email: false
 env:
   global:
-  - TWINE_USERNAME=tommyod
+  - TWINE_USERNAME=tommyod --skip-existing
 python:
 - '3.6'
 before_install:
