--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,7 +33,7 @@ after_test:
   # Again, you only need build.cmd if you're building C extensions for
   # 64-bit Python 3.3/3.4. And you need to use %PYTHON% to get the correct
   # interpreter
-  - "build.cmd %PYTHON%\\python.exe setup.py bdist_wheel"
+  - "python setup.py bdist_wheel"
 
 artifacts:
   # bdist_wheel puts your built wheel in the dist directory
@@ -45,7 +45,7 @@ on_success:
 #  access your wheels from the Appveyor "artifacts" tab for your build.
 
   - pip install twine
-  - twine upload dist --skip-existing -u tommyod -p $TWINE_PASSWORD
+  - twine upload dist\* --skip-existing -u tommyod -p $TWINE_PASSWORD
 
 
 
