--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 matrix:
   include:
+  
     - sudo: required
       services:
         - docker
@@ -9,20 +10,11 @@ matrix:
       install:
         - docker pull $DOCKER_IMAGE
         - python setup.py develop
-
-    - sudo: required
-      services:
-        - docker
-      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
-           PRE_CMD=linux32
-           PIP=pip
-      install:
-        - docker pull $DOCKER_IMAGE
-        - python setup.py develop
-
+        
     - os: osx
       language: generic
       env: PIP=pip2
+      
 notifications:
   email: false
 env:
@@ -31,7 +23,7 @@ env:
 python:
 - '3.6'
 before_install:
-- "$PIP install pep8"
+- "$PIP install pep8>=1.7.1"
 - "$PIP install flake8>=3.5.0"
 - "$PIP install numpy>=1.14.2"
 - "$PIP install scipy>=1.0.1"
