--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -45,7 +45,7 @@ on_success:
 #  access your wheels from the Appveyor "artifacts" tab for your build.
 
   - pip install twine
-  - twine upload dist\* --skip-existing -u tommyod -p $env:TWINE_PASSWORD
+  - twine upload dist\* -u tommyod -p $env:TWINE_PASSWORD --skip-existing 
 
 
 
