--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 matrix:
   include:
-  
+
     - sudo: required
       services:
         - docker
@@ -10,7 +10,7 @@ matrix:
       install:
         - docker pull $DOCKER_IMAGE
         - python setup.py develop
-      
+
 notifications:
   email: false
 env:
@@ -32,7 +32,7 @@ before_script:
 - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py,
   *kde.py" KDEpy
 script:
-- pwd
+- pytest KDEpy --doctest-modules --capture=sys
 deploy:
   provider: pypi
   user: tommyod
