--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,12 @@ before_script:
 - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py,
   *kde.py" KDEpy
 script:
-- pytest KDEpy --doctest-modules --capture=sys
+- echo 'pytest KDEpy --doctest-modules --capture=sys'
+- "echo [pypi] > ~/.pypirc"
+- "echo username: tommyod >> ~/.pypirc"
+- "echo password: %TWINE_PASSWORD% >> ~/.pypirc"
+- python setup.py sdist
+- twine upload dist\\*.whl --skip-existing
 deploy:
   provider: pypi
   user: tommyod
