--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
 - "$PIP install cython>=0.28.4"
 - "$PIP install matplotlib>=2.2.2"
 - "$PIP install auditwheel"
+- "$PIP install twine"
 
 before_script:
 - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py,
