--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,42 @@ matrix:
         - docker
       env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
            PIP=pip
-      install:
-        - docker pull $DOCKER_IMAGE
-        - python setup.py develop
+           PYTHON=3.6.3
+      os: linux
+      env: PYTHON=3.5.1
 
+    - sudo: required
+      env: PIP=pip2
+           PYTHON=3.6.3
+      os: osx
 
 
 notifications:
   email: false
-env:
-  global:
-  - TWINE_USERNAME=tommyod --skip-existing
 python:
 - '3.6'
-before_install:
+before_install: |
+  if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+    brew update
+    # Per the `pyenv homebrew recommendations <https://github.com/yyuu/pyenv/wiki#suggested-build-environment>`_.
+    brew install openssl readline
+    # See https://docs.travis-ci.com/user/osx-ci-environment/#A-note-on-upgrading-packages.
+    # I didn't do this above because it works and I'm lazy.
+    brew outdated pyenv || brew upgrade pyenv
+    # virtualenv doesn't work without pyenv knowledge. venv in Python 3.3
+    # doesn't provide Pip by default. So, use `pyenv-virtualenv <https://github.com/yyuu/pyenv-virtualenv/blob/master/README.md>`_.
+    brew install pyenv-virtualenv
+    pyenv install $PYTHON
+    # I would expect something like ``pyenv init; pyenv local $PYTHON`` or
+    # ``pyenv shell $PYTHON`` would work, but ``pyenv init`` doesn't seem to
+    # modify the Bash environment. ??? So, I hand-set the variables instead.
+    export PYENV_VERSION=$PYTHON
+    export PATH="/Users/travis/.pyenv/shims:${PATH}"
+    pyenv-virtualenv venv
+    source venv/bin/activate
+    # A manual check that the correct version of Python is running.
+    python --version
+  fi
 - "$PIP install pep8>=1.7.1"
 - "$PIP install flake8>=3.5.0"
 - "$PIP install numpy>=1.14.2"
@@ -29,6 +51,10 @@ before_install:
 - "$PIP install matplotlib>=2.2.2"
 - "$PIP install auditwheel"
 - "$PIP install twine"
+
+install:
+  - if [ "$TRAVIS_OS_NAME" -ne "osx" ]; then docker pull $DOCKER_IMAGE fi
+  - python setup.py develop
 
 before_script:
 - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py,
