--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ matrix:
 python:
 - '3.6'
 before_install:
+- python --version
 - "$PIP install pep8>=1.7.1"
 - "$PIP install flake8>=3.5.0"
 - "$PIP install numpy>=1.14.2"
@@ -25,7 +26,6 @@ before_install:
 - "$PIP install pytest>=3.6.2"
 - "$PIP install cython>=0.28.4"
 - "$PIP install matplotlib>=2.2.2"
-- "$PIP install auditwheel"
 - "$PIP install twine"
 
 install:
