--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,10 @@ notifications:
 
 matrix:
   include:
-    - os: linux
-      sudo: required
-      services: docker
-      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
-           PIP=pip
-
+    - sudo: required
+      services:
+        - docker
+      env: PIP=pip
     - os: osx
       language: generic
       env: PIP=pip2
@@ -33,7 +31,7 @@ install:
 before_script:
 - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py,
   *kde.py" KDEpy
+
 script:
-- echo 'pytest KDEpy --doctest-modules --capture=sys'
-- python setup.py sdist
-- twine upload dist/* -u tommyod -p $TWINE_PASSWORD --skip-existing
+  - $PIP install cibuildwheel==0.9.4
+  - cibuildwheel --output-dir wheelhouse
