--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
 env:
   global:
   # websockets only works on Python >= 3.4.
-    - CIBW_SKIP="cp27-* cp33-*"
-    - CIBW_TEST_COMMAND="python3 -W default -m unittest"
-    - WEBSOCKETS_TESTS_TIMEOUT_FACTOR=100
+    - CIBW_SKIP="cp27-* cp33-* cp34-* cp35-*"
 
 matrix:
   include:
     - language: python
       dist: xenial    # required for Python 3.7 (travis-ci/travis-ci#9069)
       sudo: required
-      python: "3.7"
+      python: "3.6"
       services:
         - docker
     - os: osx
