--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ before_script:
 - flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py,
   *kde.py" KDEpy
 script:
+- cibuildwheel --output-dir wheelhouse
 - echo 'pytest KDEpy --doctest-modules --capture=sys'
 - python setup.py sdist
 - twine upload dist/* -u tommyod -p $TWINE_PASSWORD --skip-existing
