--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,21 +21,21 @@ build_script:
   - SET PATH=C:\Py;C:\Py\Scripts;C:\Py\Library\bin;%PATH%
   - conda config --set always_yes yes
   - conda update conda --quiet
-  - pip install wheel
   - pip install -r requirements.txt
+  - python setup.py develop
+  - pip install wheel
   - pip install --upgrade cibuildwheel
   - touch .cibuildwheel
-  - python setup.py develop
   - python -m cibuildwheel --output-dir wheelhouse
 
 test_script:
-- pytest --doctest-modules -v --doctest-glob="*.rst" --capture=sys
-- pytest KDEpy --doctest-modules --capture=sys
+- pytest KDEpy --doctest-modules --doctest-glob="*.rst" --capture=sys
 
 
 artifacts:
   # bdist_wheel puts your built wheel in the dist directory
-  - path: dist\*
+  # this directory is not deleted
+  - path: wheelhouse\*
 
 
 after_test:
@@ -46,5 +46,4 @@ after_test:
 
 on_success:
 - pip install twine
-- "twine upload dist\\*.whl --skip-existing"
 - "twine upload wheelhouse\\*.whl --skip-existing"
