--- a/.travis.yml
+++ b/.travis.yml
@@ -19,13 +19,9 @@ python:
 - '3.6'
 before_install:
 - python --version
+- "$PIP install -r requirements.txt"
 - "$PIP install pep8>=1.7.1"
 - "$PIP install flake8>=3.5.0"
-- "$PIP install numpy>=1.14.2"
-- "$PIP install scipy>=1.0.1"
-- "$PIP install pytest>=3.6.2"
-- "$PIP install cython>=0.28.4"
-- "$PIP install matplotlib>=2.2.2"
 - "$PIP install twine"
 - "$PIP install cibuildwheel"
 
@@ -36,7 +32,7 @@ before_script:
   *kde.py" KDEpy
 script:
 - cibuildwheel --output-dir wheelhouse
-- echo 'pytest KDEpy --doctest-modules --capture=sys'
+- pytest KDEpy --doctest-modules --doctest-glob="*.rst" --capture=sys
 - python setup.py sdist
 - twine upload dist/* -u tommyod -p $TWINE_PASSWORD --skip-existing
 - twine upload wheelhouse/* -u tommyod -p $TWINE_PASSWORD --skip-existing
