--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
     - os: osx
       language: generic
       env: PIP=pip3
+           PYTHON=python3
 
 
 env:
@@ -28,6 +29,7 @@ before_install:
     brew upgrade python;
   fi
 - python --version
+- "$PYTHON --version"
 - "$PIP install numpy>=1.14.2"
 - "$PIP install scipy>=1.0.1"
 - "$PIP install pytest>=3.6.2"
@@ -37,15 +39,15 @@ before_install:
 - "$PIP install flake8>=3.5.0"
 
 install:
-  - python setup.py develop
+  - "$PYTHON setup.py develop"
 before_script:
-- flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py,
+- $PYTHON -m flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py,
   *kde.py" KDEpy
 script:
-- "$PIP install twine"
+#- "$PIP install twine"
 - "$PIP install cibuildwheel"
-- cibuildwheel --output-dir wheelhouse
-- pytest KDEpy --doctest-modules --doctest-glob="*.rst" --capture=sys
-- python setup.py sdist
+- $PYTHON -m cibuildwheel --output-dir wheelhouse
+- $PYTHON -m pytest KDEpy --doctest-modules --doctest-glob="*.rst" --capture=sys
+- $PYTHON python setup.py sdist
 - twine upload dist/* -u tommyod -p $TWINE_PASSWORD --skip-existing
 - twine upload wheelhouse/* -u tommyod -p $TWINE_PASSWORD --skip-existing
