--- a/.travis.yml
+++ b/.travis.yml
@@ -12,22 +12,15 @@ matrix:
       sudo: required
       services: docker
       language: python
-      python: '3.7'
+      python:
+        - '3.7'
+        - '3.6'
       env: PIP=pip
            PYTHON=python
-
-    - os: linux
-      sudo: required
-      services: docker
-      language: python
-      python: '3.6'
-      env: PIP=pip
-           PYTHON=python
-
 
     - os: osx
       language: generic
-      # OSX defaults to py2, so we explicitly set pip3 and python3 here 
+      # OSX defaults to py2, so we explicitly set pip3 and python3 here
       env: PIP=pip3
            PYTHON=python3
 
