--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ language: python
 notifications:
   email: false
 
-# Expand to three builds. OSX and linux to build wheels, and py36 and py37
-# For moreinformation about building wheels, see:
+# The matrix expands to 3 builds: OSX and linux to build wheels
+# and py36 and py37 for general testing
+# For more information about building wheels, see:
 # https://pythonwheels.com/
 # https://github.com/joerick/cibuildwheel
 
@@ -14,16 +15,16 @@ matrix:
       sudo: required
       services: docker
       python: '3.6'
-      env: PIP=pip3
-           PYTHON=python3
+      env: PIP=pip
+           PYTHON=python
 
     - os: linux
       dist: xenial    # required for Python 3.7 (travis-ci/travis-ci#9069)
       sudo: required
       services: docker
       python: '3.7'
-      env: PIP=pip3
-           PYTHON=python3
+      env: PIP=pip
+           PYTHON=python
 
     - os: osx
       language: generic
