--- a/.travis.yml
+++ b/.travis.yml
@@ -58,9 +58,9 @@ before_script:
 # If a tag was used, build wheels and deply to pypi
 script:
 - if [ "${TRAVIS_TAG:-}" != "" ]; then
-      "$PIP install cibuildwheel";
-      "$PYTHON -m cibuildwheel --output-dir wheelhouse";
-      "$PIP install twine";
-      "$PYTHON -m twine upload dist/* -u tommyod -p $TWINE_PASSWORD --skip-existing";
-      "$PYTHON -m twine upload wheelhouse/* -u tommyod -p $TWINE_PASSWORD --skip-existing";
+      $PIP install cibuildwheel;
+      $PYTHON -m cibuildwheel --output-dir wheelhouse;
+      $PIP install twine;
+      $PYTHON -m twine upload dist/* -u tommyod -p $TWINE_PASSWORD --skip-existing;
+      $PYTHON -m twine upload wheelhouse/* -u tommyod -p $TWINE_PASSWORD --skip-existing;
   fi
