--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,7 @@
 skip_tags: true
 clone_depth: 50
 
+# Needed to build Cython
 os: Visual Studio 2015
 
 environment:
@@ -8,6 +9,8 @@ environment:
     - PY_MAJOR_VER: 3
       PYTHON_ARCH: "x86_64"
       CIBW_SKIP: cp27-* cp33-* cp34-* cp35-*
+      CIBW_TEST_REQUIRES: pytest
+      CIBW_TEST_COMMAND: python3 -m pytest
 
 platform:
     - x64
