--- a/.travis.yml
+++ b/.travis.yml
@@ -24,16 +24,14 @@ matrix:
       python: '3.7'
 
     - os: osx
+      language: generic
 
 # The global environments are for the cibuildwheel python package
-# They denote which versions to SKIP and test commands to run
 env:
   global:
-    - CIBW_SKIP="cp27-* cp33-* cp34-* cp35-*"
-    - CIBW_TEST_REQUIRES="pytest"
-    - CIBW_TEST_COMMAND="python3 -m pytest"
-    - PIP=pip3
-    - PYTHON=python3
+    CIBW_SKIP="cp27-* cp33-* cp34-* cp35-*"
+    PIP=pip3
+    PYTHON=python3
 
 before_install:
 # The default version on OSX is 2.7 - this installs python 3.7 as python3
@@ -43,7 +41,6 @@ before_install:
   fi
 - "$PYTHON --version"
 - "$PIP install -r requirements.txt"
-# These packages are used for linting
 - "$PIP install pep8>=1.7.1"
 - "$PIP install flake8>=3.5.0"
 
@@ -63,4 +60,4 @@ script:
       $PIP install twine;
       $PYTHON -m twine upload dist/* -u tommyod -p $TWINE_PASSWORD --skip-existing;
       $PYTHON -m twine upload wheelhouse/* -u tommyod -p $TWINE_PASSWORD --skip-existing;
-  fi
+fi
