--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ env:
   global:
     - CIBW_SKIP="cp27-* cp33-* cp34-* cp35-*"
     - CIBW_TEST_REQUIRES=pytest
-    - CIBW_TEST_COMMAND="python3 -m pytest KDEpy --doctest-modules"
+    - CIBW_TEST_COMMAND="python3 -m pytest {project} --doctest-modules"
     - PIP=pip3
     - PYTHON=python3
 
