--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,8 @@ matrix:
     - os: osx
       language: generic
 
-# The global environments are for the cibuildwheel python package
+# The first 3 global variables are for the cibuildwheel python package
+# The remaining 2 are set to assure Python 3 is used on OS X (mac)
 env:
   global:
     - CIBW_SKIP="cp27-* cp33-* cp34-* cp35-*"
@@ -35,8 +36,9 @@ env:
     - PIP=pip3
     - PYTHON=python3
 
+# If OS X - install Pyton 3 as python3.
+# Print the python version, install general requirements and linting
 before_install:
-# The default version on OSX is 2.7 - this installs python 3.7 as python3
 - if [ "${TRAVIS_OS_NAME:-}" == "osx" ]; then
     brew update;
     brew upgrade python;
@@ -46,15 +48,18 @@ before_install:
 - $PIP install pep8>=1.7.1
 - $PIP install flake8>=3.5.0
 
+# Install the package, create source distribution (worse alternative to wheels)
+# Run the tests.
 install:
 - $PYTHON setup.py develop sdist
 - $PYTHON -m pytest KDEpy --doctest-modules --capture=sys
 
+# Linting
 before_script:
 - $PYTHON -m flake8 --show-source --ignore=F811,W293,W391,W292,W291 --max-line-length=79 --exclude="*examples.py,
   *kde.py" KDEpy
 
-# If a tag was used, build  wheels and deply to pypi
+# If a tag was used, build wheels and deply to pypi
 script:
 - echo "$TRAVIS_TAG"
 - if [ -n "$TRAVIS_TAG" ]; then
