--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ matrix:
     - os: linux
       sudo: required
       services: docker
+      python: '3.5'
+      
+    - os: linux
+      sudo: required
+      services: docker
       python: '3.6'
 
     - os: linux
@@ -30,7 +35,7 @@ matrix:
 # The remaining 2 are set to assure Python 3 is used on OS X (mac)
 env:
   global:
-    - CIBW_SKIP="cp27-* cp33-* cp34-* cp35-*"
+    - CIBW_SKIP="cp27-* cp33-* cp34-*"
     - CIBW_TEST_REQUIRES=pytest
     - CIBW_TEST_COMMAND="python3 -m pytest {project} --doctest-modules"
     - PIP=pip3
