--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,7 +9,7 @@ environment:
   matrix:
     - PY_MAJOR_VER: 3
       PYTHON_ARCH: "x86_64"
-      CIBW_SKIP: cp27-* cp33-* cp34-* cp35-*
+      CIBW_SKIP: cp27-* cp33-* cp34-*
       CIBW_TEST_REQUIRES: pytest matplotlib
       CIBW_TEST_COMMAND: python -m pytest {project} --doctest-modules
 
