--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,8 @@ env:
 before_install:
 - if [ "${TRAVIS_OS_NAME:-}" == "osx" ]; then
     brew update;
+  fi
+- if [ "${TRAVIS_OS_NAME:-}" == "osx" ]; then
     brew upgrade python;
   fi
 - $PYTHON --version
