--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,9 @@ before_install:
 - if [ "${TRAVIS_OS_NAME:-}" == "osx" ]; then
     brew update;
   fi
+- if [ "${TRAVIS_OS_NAME:-}" -ne "osx" ]; then
+    sudo apt install libpython3.6-dev;
+  fi
 - $PYTHON --version
 - $PIP install -r requirements.txt
 - $PIP install pep8>=1.7.1
