--- a/.travis.yml
+++ b/.travis.yml
@@ -65,10 +65,8 @@ before_script:
 # If a tag was used, build wheels and deply to pypi
 script:
 - echo "$TRAVIS_TAG"
-- if [ -n "$TRAVIS_TAG" ]; then
-      $PIP install cibuildwheel;
-      $PYTHON -m cibuildwheel --output-dir wheelhouse;
-      $PIP install twine;
-      $PYTHON -m twine upload dist/* -u tommyod -p $TWINE_PASSWORD --skip-existing;
-      $PYTHON -m twine upload wheelhouse/* -u tommyod -p $TWINE_PASSWORD --skip-existing;
-  fi
+- $PIP install cibuildwheel;
+  $PYTHON -m cibuildwheel --output-dir wheelhouse;
+  $PIP install twine;
+  $PYTHON -m twine upload dist/* -u tommyod -p $TWINE_PASSWORD --skip-existing;
+  $PYTHON -m twine upload wheelhouse/* -u tommyod -p $TWINE_PASSWORD --skip-existing;
