--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,9 @@ before_script:
 # If a tag was used, build wheels and deply to pypi
 script:
 - echo "$TRAVIS_TAG"
-- $PIP install cibuildwheel;
+- if [ -n "$TRAVIS_TAG" ]; then
+  $PIP install cibuildwheel;
   $PYTHON -m cibuildwheel --output-dir wheelhouse;
   $PIP install twine;
   $PYTHON -m twine upload dist/* -u tommyod -p $TWINE_PASSWORD --skip-existing;
+  fi
