--- a/.travis.yml
+++ b/.travis.yml
@@ -59,8 +59,7 @@ install:
 
 # Linting
 before_script:
-- $PYTHON -m flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504
-  --max-line-length=88 --exclude="*examples.py,testing.py,*kde.py" KDEpy
+- $PYTHON -m flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503 --max-line-length=88 --exclude="*examples.py,testing.py,*kde.py" KDEpy
 
 # If a tag was used, build wheels and deply to pypi
 script:
