added sudo apt install

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ before_install:
     sudo apt install libpython3.6-dev;
   fi
 - $PYTHON --version
+- sudo apt-get install gcc gfortran python-dev libopenblas-dev liblapack-dev cython
 - $PIP install -r requirements.txt
 - $PIP install pep8>=1.7.1
 - $PIP install flake8>=3.5.0
